styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@font-face {
  font-family: "Finlandica";
  src: url("/tasklist/font/Finlandica.ttf") format("truetype");
  font-weight: 400;
}

@font-face {
  font-family: "Finlandica";
  src: url("/tasklist/font/Finlandica-SemiBold.ttf") format("truetype");
  font-weight: 600;
}

html,
body {
  padding: 0;
  margin: 0;
  font-family: "Finlandica", sans-serif;
  overscroll-behavior-y: contain;
}

a {
  color: inherit;
  text-decoration: none;
}

* {
  box-sizing: border-box;
}

#__next {
  min-width: 100vw;
  min-height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
}

@layer utilities {
  .h1 {
    @apply text-[2.5rem] mx-0 mt-0 mb-[0.5rem] leading-[1.2] font-semibold;
  }
  .h2 {
    @apply text-[2rem] mx-0 mt-0 mb-[0.5rem] leading-[1.2] font-semibold;
  }
  .h3 {
    @apply text-[1.75rem] mx-0 mt-0 mb-[0.5rem] leading-[1.2] font-semibold;
  }
  .p {
    @apply m-0 mt-0 mb-4;
  }
}

::-webkit-scrollbar-thumb {
  background-color: rgb(190, 190, 190);
}

::-webkit-scrollbar {
  width: 4px;
  height: 4px;
  background-color: rgb(230, 230, 230);
}

